Fixed Spacing

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -818,6 +818,7 @@ div.contact-info p {
 footer {
     background-color: #062134;
     padding: 60px 0;
+    margin-top: 20px;
 }
 .footer-logo {
     margin-right: 2em;
